--- a/.github/workflows/build_and_coveralls.yml
+++ b/.github/workflows/build_and_coveralls.yml
@@ -32,7 +32,9 @@ jobs:
     
     steps:
       # We want to use GitHub CI checkout version 3 for checking out the branch
-      - uses: actions/checkout@v3
+      - name: ROS 2 CI Action
+        uses: ros-tooling/action-ros-ci@0.2.7
+
       
       # Install some system pacakges
       - name: Install packages
