--- a/.github/workflows/build_and_coveralls.yml
+++ b/.github/workflows/build_and_coveralls.yml
@@ -1,61 +1,72 @@
+name: Build & Test
 
-##############################################################################
-#
-# GitGub CI workflow syntax spec:
-#    https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
-#
-# Coveralls example:
-#    https://github.com/marketplace/actions/coveralls-github-action
-#
-##############################################################################
-
-name: Build
-
-on:
-  # Triggered whenever push to the master branch
-  push:
-    branches: [ "master" ]
-
-  # Triggered whenever a pull request is created on master
-  pull_request:
-    branches: [ "master" ]
-    types: [opened]
-
-  # Allow manual trigger
-  workflow_dispatch:
+on: [push, pull_request]
 
 jobs:
   build:
-    # Create a container of the latest Ubuntu, other values could be
-    # ubuntu-latest, ubuntu-22.04, etc.
+
     runs-on: ubuntu-20.04
-    
+
+    strategy:
+      matrix:
+        container:
+          - image: 'ros:noetic'
+            env:
+              PYTHON_VERSION:
+              ROS_DISTRO: noetic
+
+    container: ${{ matrix.container }}
+
+    defaults:
+      run:
+        shell: bash
+
     steps:
-      # We want to use GitHub CI checkout version 3 for checking out the branch
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+        with:
+          path: src/${{ github.workspace }}
 
+      - name: Remove broken apt repos [Ubuntu]
+        run: |
+          for apt_file in `grep -lr microsoft /etc/apt/sources.list.d/`; do sudo rm $apt_file; done
+      - name: Install ROS package dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y git
+          sudo apt install -y python$PYTHON_VERSION-pip
+          sudo apt install -y python3-pip
+          sudo apt install -y python$PYTHON_VERSION-osrf-pycommon
+          sudo apt install -y python$PYTHON_VERSION-catkin-tools
+          python$PYTHON_VERSION -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
+      - name: Create workspace
+        run: |
+          cd src
+          wstool init
+          cd ..
+          rosdep update
+          rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
+          
+      - name: Build workspace
+        if: contains(matrix.container.image, 'noetic') || contains(matrix.container.image, 'noetic')
+        run: |
+          . /opt/ros/$ROS_DISTRO/setup.bash
+          catkin build
+      - name: Unit tests
+        run: |
+          sudo apt install -y lcov
+          . /opt/ros/$ROS_DISTRO/setup.bash
+          catkin config --cmake-args -DCMAKE_CXX_FLAGS="-Wall -Wno-unused --coverage -fno-inline -fno-inline-small-functions -fno-default-inline" -DCMAKE_C_FLAGS="-Wall -Wno-unused --coverage -fno-inline -fno-inline-small-functions -fno-default-inline" -DCMAKE_BUILD_TYPE=Debug -DCMAKE_EXE_LINKER_FLAGS="-lgcov"
+          catkin build
+          catkin run_tests -i && catkin_test_results
+      - name: Configure Codecov
+        run: |
+          lcov --directory . --capture --output-file coverage.info
+          lcov --remove coverage.info '/opt/*' '/usr/*' '*/devel/*' '*_test*' --output-file coverage.info
+          lcov --list coverage.info
       
-      # Install some system pacakges
-      - name: Install packages
-        run: sudo apt install -y lcov
-
-      # Run CMake to setup compilation flags
-      - name: Configure Coverage CMake 
-        run: cmake -D COVERAGE=ON -D CMAKE_BUILD_TYPE=Debug -B ${{github.workspace}}/build 
-      
-      # Compile and executables
-      - name: Build Coverage
-        working-directory: ${{github.workspace}}/build
-        run: make
-
-      # Run test suite and compute code coverage
-      - name: Run Test Coverage
-        working-directory: ${{github.workspace}}/build
-        run: make code_coverage
-      
-      # Upload coverage result to Coverage.io 
-      - name: Upload result to Coveralls.io
-        uses: coverallsapp/github-action@1.1.3
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ${{github.workspace}}/build/coverage.info.cleaned
+          path-to-lcov: ${{ github.workspace }}/coverage.info
