--- a/.github/workflows/build_and_coveralls.yml
+++ b/.github/workflows/build_and_coveralls.yml
@@ -1,70 +1,39 @@
-name: Build & Test
 
-on: [push, pull_request]
+name: Basic Build Workflow
+
+on:
+  - pull_request
+  - push
 
 jobs:
-  build:
-
-    runs-on: ubuntu-20.04
-
+  build-noetic:
+    runs-on: ubuntu-latest
     strategy:
-      matrix:
-        container:
-          - image: 'ros:noetic'
-            env:
-              PYTHON_VERSION:
-              ROS_DISTRO: noetic
-
-    container: ${{ matrix.container }}
-
-    defaults:
-      run:
-        shell: bash
-
+      fail-fast: false
+    container:
+      image: ros:noetic
     steps:
-      - uses: actions/checkout@v2
-        with:
-          path: src/${{ github.workspace }}
-
-      - name: Remove broken apt repos [Ubuntu]
-        run: |
-          for apt_file in `grep -lr microsoft /etc/apt/sources.list.d/`; do sudo rm $apt_file; done
-      - name: Install ROS package dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y git
-          sudo apt install -y python3-pip
-          sudo apt install -y python3-osrf-pycommon
-          python$PYTHON_VERSION -m pip install --upgrade pip
-          python3 -m pip install --upgrade pip3
-      - name: Create workspace
-        run: |
-          cd src
-          wstool init
-          cd ..
-          rosdep update
-          rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
-          
-      - name: Build workspace
-        if: contains(matrix.container.image, 'noetic') || contains(matrix.container.image, 'noetic')
-        run: |
-          . /opt/ros/$ROS_DISTRO/setup.bash
-          catkin build
-      - name: Unit tests
-        run: |
-          sudo apt install -y lcov
-          . /opt/ros/$ROS_DISTRO/setup.bash
-          catkin config --cmake-args -DCMAKE_CXX_FLAGS="-Wall -Wno-unused --coverage -fno-inline -fno-inline-small-functions -fno-default-inline" -DCMAKE_C_FLAGS="-Wall -Wno-unused --coverage -fno-inline -fno-inline-small-functions -fno-default-inline" -DCMAKE_BUILD_TYPE=Debug -DCMAKE_EXE_LINKER_FLAGS="-lgcov"
-          catkin build
-          catkin run_tests -i && catkin_test_results
-      - name: Configure Codecov
-        run: |
-          lcov --directory . --capture --output-file coverage.info
-          lcov --remove coverage.info '/opt/*' '/usr/*' '*/devel/*' '*_test*' --output-file coverage.info
-          lcov --list coverage.info
-      
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ${{ github.workspace }}/coverage.info
+    - name: Checkout repo
+      uses: actions/checkout@v2
+    - name: Create Workspace
+      run: |
+        mkdir src_tmp
+        mv `find -maxdepth 1 -not -name . -not -name src_tmp` src_tmp/
+        mv src_tmp/ src/
+        cd src
+        bash -c 'source /opt/ros/$ROS_DISTRO/setup.bash; \
+        catkin_init_workspace'
+    - name: Install Prerequisites
+      run: |
+        bash -c 'source /opt/ros/$ROS_DISTRO/setup.bash; \
+        apt-get update && rosdep update; \
+        rosdep install --from-paths src --ignore-src -y'
+    - name: Build Workspace
+      run: |
+        bash -c 'source /opt/ros/$ROS_DISTRO/setup.bash; \
+        catkin_make'
+    - name: Run Tests
+      run: |
+        bash -c 'source /opt/ros/$ROS_DISTRO/setup.bash; \
+        catkin_make run_tests; \
+        catkin_test_results --verbose'
