--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,12 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   nav_msgs
   sensor_msgs
+  image_transport
+  cv_bridge
 )
 
 
+find_package(OpenCV REQUIRED)
 catkin_package()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
@@ -29,6 +32,7 @@ add_library(anomaly_library src/detect_anomaly.cpp)
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 add_executable(ADRobot_node src/node.cpp)
@@ -41,6 +45,7 @@ target_link_libraries(ADRobot_node
   perception_library
   anomaly_library
   ${catkin_LIBRARIES}
+  ${OpenCV_LIBS}
 )
 
 ###########
