--- a/.github/workflows/build_and_coveralls.yml
+++ b/.github/workflows/build_and_coveralls.yml
@@ -13,7 +13,7 @@ jobs:
         container:
           - image: 'ros:noetic'
             env:
-              PYTHON_VERSION:
+              PYTHON_VERSION: 3
               ROS_DISTRO: noetic
 
     container: ${{ matrix.container }}
