--- a/.github/workflows/build_and_coveralls.yml
+++ b/.github/workflows/build_and_coveralls.yml
@@ -39,7 +39,7 @@ jobs:
           sudo apt install -y python3-pip
           sudo apt install -y python$PYTHON_VERSION-osrf-pycommon
           sudo apt install -y python$PYTHON_VERSION-catkin-tools
-          sudo apt install libopencv-dev python3-opencv
+          sudo apt install -y libopencv-dev python3-opencv
           python$PYTHON_VERSION -m pip install --upgrade pip
           python3 -m pip install --upgrade pip
 
